--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "famcache"
 version = "1.0.0"
+description = "Official Famcache server client"
+license = "MIT"
 edition = "2021"
 
 [dependencies]
