fix(ci): Increment version on release

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,8 @@ jobs:
       - name: Install dependencies
         run: yarn
 
+      - name: Install cargo-edit
+        run: cargo install cargo-edit
       - name: Release
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
