chore(ci): PR Auto labeler: add feature/fix/chore labels

--- a/.github/label-config.yml
+++ b/.github/label-config.yml
@@ -11,3 +11,12 @@ ci:
 core:
   - changed-files:
       - any-glob-to-any-file: ["src/lib.rs", "Cargo.toml"]
+
+feature:
+  - head-branch: ["^feature", "feature"]
+
+fix:
+  - head-branch: ["^fix", "fix"]
+
+chore:
+  - head-branch: ["^chore", "chore"]
