--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -1,7 +1,6 @@
 name: "PR Labeler"
 on:
-  pull_request_target:
-    types: [opened, synchronize, reopened]
+  - pull_request_target
 
 jobs:
   labeler:
