--- a/.github/workflows/pr-labeler.yml
+++ b/.github/workflows/pr-labeler.yml
@@ -1,6 +1,10 @@
 name: "PR Labeler"
 on:
-  - pull_request_target
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
 
 jobs:
   labeler:
